client/src/styles/components/_navbar.scss
.navbar {
  color: $color-light;
  width: 100%;
  height: 5rem;
  position: absolute;
  bottom: 0;
  background-color: $color-blue-dark;
  background-size: cover;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: .5rem 15rem;

  @include respond-medium {
    padding: .5rem 3rem;
  }

  a,
  a::before,
  a::after {
    color: white;
  }

  &__logo {
    font-size: 3rem;
  }

  &__menu {
    display: flex;
    min-width: 10rem;
    max-width: 15%;
    height: 100%;
    justify-content: space-between;

    &-container {
      height: 100%;
      position: relative;
    }

    a {
      width: 100%;
    }

    svg {
      height: 100%;
    }

    .svg__container {
      height: 100%;
      // @include respond-medium-small {
      //   height: 4.5rem;
      // }
    }
  }

  &__hamburger {
    height: 100%;
    margin: 0;
    padding: 0;
    width: 3rem;
    overflow: hidden;
    cursor: pointer;

    svg {
      pointer-events: none;
    }
  }

  &__popup, &__sub-popup {
    position: absolute;
    box-shadow: $shadow-2;
    border-radius: 2px;
    top: 6rem;
    width: 18rem;
    left: 50%;
    transform: translateX(-50%);
    z-index: 2;
    opacity: 0;
    pointer-events: none;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    
    &.active {
      opacity: 1;
      pointer-events: auto;
    }

    @include respond-medium {
      transform: translateX(-65%);
    }
  }
  
  &__popup {
    background: white;
    height: max-content;
    padding: 2rem 0;
    color: $color-grey;
    user-select: none;
    transition: opacity .2s ease-in;
  }
  
  &__stories {
    position: relative;
    width: 100%;
    cursor: pointer;

    &-container {
      width: 100%;
      text-align: center;
    }

    a {
      color: $color-grey;
      cursor: pointer;

      &:hover {
        background: $gradient-darker-grey;
        color: $color-white;
      }
    }
  }

  &__sub-popup {
    @include calc("left", "-50% - 2rem");
    top: -1rem;
    background: $color-light;
    line-height: 3rem;
    transition: opacity .1s ease-in;
    
    a {
      width: 100%;
      padding: 1rem;
      @include hide-overflowing-words;
    }
  }

  &__popup-top {
    display: flex; 
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    padding: 0 1rem;
    position: relative;
    margin-bottom: 1rem;
    
    &::after {
      content: '';
      width: 100%;
      height: 1px;
      background: $color-lime;
      margin-top: 1rem;
    }

    svg {
      background: white;
      box-shadow: $shadow-2;
      height: 2rem;
      width: 2rem;
      padding: .25rem;
      border-radius: 50%;
      position: absolute;
      right: 6rem;
      bottom: 3rem;
      cursor: pointer;
      transition: background .2s ease-in;

      &:hover {
        background: $color-light;
      }
    }
  }

  &__popup-bottom {
    width: 100%;
    height: 100%;

    & > * {
      cursor: pointer;
      padding: 1rem;
      display: flex;
      justify-content: center;
      transition: all .1s ease-in;

      &:hover{ 
        background: $color-transparent-dark;
        color: $color-dark;
      }
    }
  }

  &__profile-image {
    width: 5rem;
    height: 5rem;
    border-radius: 50%;
    overflow: hidden;
    user-select: none;
    margin-bottom: .5rem;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
    }
  }  
}

